2006-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fix regexp matching
	backnumber urls.

2006-09-16  David Hansen  <david.hansen@physik.fu-berlin.de>

	* w3m.el (w3m-relationship-estimate-rules): Changed freshmeat URL
	regexp.

2006-09-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-nikkei.el (shimbun-nikkei-get-headers-it-default):
	Don't fetch all backnumbers every time.

2006-09-14  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-gendai-net.el (shimbun-gendai-net-get-headers-default):
	Return immediately if article that has already been read is found.

2006-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-gendai-net.el (shimbun-get-headers): Support range.
	(shimbun-gendai-net-get-headers-default): Ditto.
	(shimbun-gendai-net-get-headers-today): Ditto; don't re-fetch initial
	page.

	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Support range.

2006-09-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-lynx-like-map, w3m-info-like-map): Don't bind M-g key
	because Emacs 22 uses it as a prefix command in global map.  Suggested
	by David Hansen <david.hansen@gmx.net>.

	* shimbun/sb-gendai-net.el: New module.

2006-09-09  Masayuki Ataka  <ataka@milk.freemail.ne.jp>

	* w3m-search.el (w3m-search-engine-alist): Instruct explicitly Google
	to return English pages for google-en.

2006-09-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-default-directory): New variable.
	(w3m-current-directory): Use it.

2006-09-06  David Hansen  <david.hansen@physik.fu-berlin.de>

	* sb-spiegel.el (shimbun-spiegel-content-start): Follow page layout
	changes.
	(shimbun-spiegel-content-end): ditto.

2006-09-05  David Hansen  <david.hansen@gmx.net>

	* w3m.el (w3m-local-find-file-regexps): Default to
	'(nil . "\\.[sx]?html?\\'").

2006-09-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-sankei.el (shimbun-sankei-group-table): Update editoria,
	column, and seiron groups.