@@ -1,3 +1,10 @@
+2006-09-19  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* shimbun/sb-gendai-net.el (shimbun-gendai-net-get-headers-default):
+	Check all headers in at least the first index page anyway.
+	(shimbun-make-contents): Don't use fetched contents if it seems to
+	have failed.
+
 2006-09-18  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* shimbun/sb-ohmynews-jp.el (shimbun-get-headers): Fix regexp matching
